tests/errors/const_cycle.vt
const A: int = B + 1; const B: int = A + 1; fn main(){}
